# CKeJIeToH4uK

./: README.md
image_processor2/: CMakeLists.txt  Headers.h  image_processor.cpp
image_processor2/BmpFiles/: bmp_header.cpp  bmp_header.h  dib_header.cpp  dib_header.h  image.cpp  image.h
image_processor2/Color/: color.cpp  color.h
image_processor2/Filters/: CropFilter.cpp  CropFilter.h  GaussBlurFilter.cpp  GaussBlurFilter.h  MainFilter.cpp  MainFilter.h  ParallelolgrammFilter.cpp  ParallelolgrammFilter.h  README for parallelogrammTileFilter
image_processor2/Filters/FormulaFIlters/: FormulaFilter.cpp  FormulaFilter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  NegativeFilter.cpp  NegativeFilter.h
image_processor2/Filters/MatrixFilters/: EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  MatrixFilter.cpp  MatrixFilter.h  SharpFilter.cpp  SharpFilter.h
image_processor2/MakeFilters/: MakeFilters.cpp  MakeFilters.h
image_processor2/TestBmpParallelogramm/: Tests.cpp
